syntax = "proto3";

package gophkeeper;

import "google/protobuf/timestamp.proto";

option go_package = "gophkeeper/pb";

message Secret {
  string owner = 1;
  int32 kind = 2;
  string name = 3;
  bytes value = 4;
  google.protobuf.Timestamp created = 5;
  google.protobuf.Timestamp modified = 6;
  bool deleted = 7;
}

message SecretRequest {
  string owner = 1;
  int32 kind = 2;
  string name = 3;
}

message SecretsRequest {
  string owner = 1;
}

message Secrets {
  repeated Secret secrets = 1;
}
